# solokit

./: .gitignore  CHANGELOG.md  CITATION.cff  CI_SETUP.md  LICENSE  README.md  RELEASE_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
features/: basic.yaml  contour.yaml  rhythm.yaml
frontend/: index.html
frontend/static/css/: styles.css
frontend/static/js/: app.js
src/solokit/: __init__.py  cli.py  cli_download.py  data.py
src/solokit/api/: __init__.py  client.py  schemas.py  server.py
src/solokit/audio/: __init__.py  f0.py  loudness.py  transcribe.py  tuning.py
src/solokit/core/: __init__.py  phrase.py  segmentation.py  solo.py  transcription.py
src/solokit/corpora/: __init__.py  base.py  dtl1000.py  omnibook.py  wjazzd.py
src/solokit/features/: __init__.py  machine.py  pitch.py  rhythm.py
src/solokit/patterns/: __init__.py  ngram.py  similarity.py  transformations.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_api_schemas.py  test_audio_pipeline.py  test_data.py  test_features.py  test_ngram.py  test_omnibook_corpus.py  test_phrase_search.py  test_pyin_merge.py  test_similarity.py  test_transformations.py  test_wjazzd_corpus.py
tests/e2e/: frontend.test.mjs  package-lock.json  package.json  run.sh
